works done laba5 complete

--- a/blog/articles/static/css/styles.css
+++ b/blog/articles/static/css/styles.css
@@ -27,7 +27,7 @@ img {
 .article-created-date { 
    text-align: right;
 }
-.post-title a {
+.post-title{
    color: #ffffff;
 }
 .article-author { 
