--- a/blog/articles/templates/archive.html
+++ b/blog/articles/templates/archive.html
@@ -13,7 +13,9 @@
     <div class="archive">
         {% for post in posts %}
         <div class="one-post">
-            <a href="/articles/{{post.id}}/"> <h2 class="post-title">{{ post.title }}</h2></a>
+            <a href="/articles/{{post.id}}/">
+                <h2 class="post-title">{{ post.title }}</h2>
+            </a>
             <div class="article-info">
                 <div class="article-author">{{ post.author.username }}</div>
                 <div class="article-created-date">{{ post.created_date }}</div>
@@ -21,8 +23,12 @@
             <p class="article-text">{{ post.get_excerpt }}</p>
         </div>
         {% endfor %}
-
+        <p>
+        <div class="article-author"><a href="/articles/new/">Написать новую статью</a></div>
+        </p>
     </div>
+
+
 </body>
 
 </html>
