--- a/blog/articles/templates/form.html
+++ b/blog/articles/templates/form.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Katok Public Blog - создать статью</title>
+    <title>ART Public Blog - создать статью</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}/static/css/styles.css">
 </head>
 
@@ -17,7 +17,7 @@
         {{ form.errors }}
     </div>
     <h4>
-        <a href="/articles/">Вернуться ко всем записям</a>
+        <a href="/archive/">Вернуться ко всем записям</a>
     </h4>
 </body>
 
